[project]
name = "dining-cryptographers"
version = "0.0.1"
authors = [{name = "Fionn Fitzmaurice"}]
description = "Unconditional sender and recipient untraceability"
readme = "README.md"
keywords = ["dining cryptographers", "dc-nets"]
requires-python = ">=3.14"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Typing :: Typed"
]

[project.optional-dependencies]
dev = [
    "pylint == 4.0.4",
    "mypy == 1.19.1",
]

[project.scripts]
dc = "dining_cryptographers:main"

[project.urls]
Homepage = "https://github.com/fionn/dining-cryptographers"
"Source Code" = "https://github.com/fionn/dining-cryptographers"
Changelog = "https://github.com/fionn/dining-cryptographers/tags"
Documentation = "https://github.com/fionn/dining-cryptographers/blob/master/README.md"
"Bug Tracker" = "https://github.com/fionn/dining-cryptographers/issues"

[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"
